@@ -11,6 +11,7 @@ Changes from 0.1.5 to 0.2-pre1:
 	- upgraded uClibc to 0.9.27
 	- upgraded wireless-tools to version 27
 	- some modifications made to cfpkg.mk
+	- added a primitive package handling
 
 Changes from 0.1.5-pre2 to 0.1.5:
 	- version rename
